--- a/.github/workflows/commentflow.yaml
+++ b/.github/workflows/commentflow.yaml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu:latest
     steps:
       - name: "dump githhub context"
-        run: echo ' {{toJson(github.event) }}' | jq
+        run: echo '${{toJSON(github.event) }}' | jq
         shell: bash
   
